--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+  background-image: url(./img/brown-bg.jpg);
+  
+  
+}
+
 .header {
   color: white;
   text-align: center;
@@ -16,20 +22,25 @@
 .general {
   margin-top: 10px;
   padding-top: 20px;
-  background-color: rgb(116, 186, 255);
   width: 100%;
-  height: 500px;
-  background-image: url(./img/brown-bg.jpg);
+  /* height: 500px; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 30px;
+  margin-bottom: 30px;
+  
+  
+  
 }
 
 .mykel-container {
   border: 1px solid none;
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: rgb(151, 250, 151);
   height: 300px;
   width: 290px;
-  margin-left: 10px;
-  border-radius: 30px;
+  margin: 20px;
   box-shadow: 5px 3px 5px 5px rgb(63, 61, 61);
   padding: 10px;
 }
@@ -43,4 +54,28 @@
 
 .social {
   text-align: center;
+}
+
+.oscar-container {
+  background-color: aquamarine;
+  height: 300px;
+  width: 290px;
+  margin: 20px;
+  padding: 10px;
+  box-shadow: rgba(63, 61, 61, 60) 0px 5px 15px;
+  
+  
+}
+
+.oscar-container > h2 {
+  text-align: center;
+  background-color: darkblue;
+  color: white;
+  border: 1px white groove;
+  border-radius: 20px;
+}
+
+.social-oscar {
+  text-align: center;
+  
 }
