--- a/style.css
+++ b/style.css
@@ -106,3 +106,40 @@ body {
   text-align: center;
   
 }
+
+
+/* Eru's CSS */
+.eru-section {
+  list-style-position: inside;
+  background-color: palevioletred;
+  color: white;
+  border-radius: 4px;
+  padding: 10px;
+  line-height: 27px;
+}
+
+
+.eru-container {
+  background-color: white;
+  border: 2px solid palevioletred;
+  border-radius: 12px;
+  color: palevioletred;
+  height: 300px;
+  width: 290px;
+  margin: 20px;
+  padding: 10px;
+  box-shadow: rgba(63, 61, 61, 60) 0px 5px 15px;
+  line-height: 1px;
+
+}
+
+.eru-container > h2 {
+  text-align: center;
+  
+}
+
+.socials {
+  text-align: center;
+  line-height: none;
+  
+}
