--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
   background-image: url(./img/brown-bg.jpg);
-  
-  
 }
 
 .header {
@@ -23,21 +21,17 @@ body {
   margin-top: 10px;
   padding-top: 20px;
   width: 100%;
-  /* height: 500px; */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-left: 30px;
+  margin-left: 20px;
   margin-bottom: 30px;
-  
-  
-  
 }
 
 .mykel-container {
   border: 1px solid none;
   border-radius: 10px;
-  background-color: rgb(151, 250, 151);
+  background-color: orange;
   height: 300px;
   width: 290px;
   margin: 20px;
@@ -63,8 +57,6 @@ body {
   margin: 20px;
   padding: 10px;
   box-shadow: rgba(63, 61, 61, 60) 0px 5px 15px;
-  
-  
 }
 
 .oscar-container > h2 {
@@ -77,7 +69,6 @@ body {
 
 .social-oscar {
   text-align: center;
-  
 }
 
 .daniel-container {
@@ -104,9 +95,7 @@ body {
 
 .social-daniel {
   text-align: center;
-  
 }
-
 
 /* Eru's CSS */
 .eru-section {
@@ -117,7 +106,6 @@ body {
   padding: 10px;
   line-height: 27px;
 }
-
 
 .eru-container {
   background-color: white;
@@ -130,18 +118,15 @@ body {
   padding: 10px;
   box-shadow: rgba(63, 61, 61, 60) 0px 5px 15px;
   line-height: 1px;
-
 }
 
 .eru-container > h2 {
   text-align: center;
-  
 }
 
 .socials {
   text-align: center;
   line-height: none;
-  
 }
 /* ogechi juliet uhegbu CSS */
 .ogechi_container {
@@ -153,7 +138,7 @@ body {
   color: black;
   box-shadow: 2px 1px 20px 5px grey;
   border-radius: 10px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -173,9 +158,8 @@ body {
 
 .social_ogechi {
   text-align: center;
-  
 }
-.social_ogechi a{
+.social_ogechi a {
   text-decoration: none;
   word-spacing: 20px;
 }
@@ -204,5 +188,4 @@ body {
 
 .social-victoria {
   text-align: center;
-  
 }
